--- a/public/jeep-hemi-conversion/index.html
+++ b/public/jeep-hemi-conversion/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <title></title>
+  <title>Jeep Wrangler Hemi Conversions</title>
 <link rel="stylesheet" media="all" href="/css/bootstrap.css"/>
 <link rel="stylesheet" media="all" href="/css/font-awesome.min.css"/>
 <link rel="stylesheet" media="all" href="/css/application.css"/>
@@ -73,102 +73,173 @@
 
     
   <div class="cover">
-  <h1>Jeep Overlander Conversion</h1>
-  <img src="/images/overlander-main.jpg" style='position: absolute; bottom: -75px;' />
+  <h1>Jeep Wrangler Hemi Conversion</h1>
+  <img src="/images/jeep-hemi-engine-conversion-001.jpg" style="position: absolute; bottom: -100px;" />
 </div>
- 	<div class="container">
-  	<div class="row m-b-3">
-    <div class="col-sm-6">
-     <div class="img-fluid">
-      <div class="galleria">              
-      <img src="/images/galleries/overlander/overlander-1.jpg">
-      <img src="/images/galleries/overlander/overlander-2.jpg">
-      <img src="/images/galleries/overlander/overlander-3.jpg">
-      <img src="/images/galleries/overlander/overlander-4.jpg">
-      <img src="/images/galleries/overlander/overlander-5.jpg">
-      <img src="/images/galleries/overlander/overlander-6.jpg">
-      <img src="/images/galleries/overlander/overlander-7.jpg">
-      <img src="/images/galleries/overlander/overlander-8.jpg">
-      <img src="/images/galleries/overlander/overlander-9.jpg">
-      <img src="/images/galleries/overlander/overlander-10.jpg">
-      <img src="/images/galleries/overlander/overlander-11.jpg">
-      <img src="/images/galleries/overlander/overlander-12.jpg">
-      <img src="/images/galleries/overlander/overlander-13.jpg">
-      <img src="/images/galleries/overlander/overlander-14.jpg">
-      <img src="/images/galleries/overlander/overlander-15.jpg">
-      <img src="/images/galleries/overlander/overlander-16.jpg">
-      <img src="/images/galleries/overlander/overlander-17.jpg">
-      <img src="/images/galleries/overlander/overlander-18.jpg">
-      <img src="/images/galleries/overlander/overlander-19.jpg">
-      <img src="/images/galleries/overlander/overlander-21.jpg">
-      <img src="/images/galleries/overlander/overlander-22.jpg">
-      <img src="/images/galleries/overlander/overlander-23.jpg">
-      <img src="/images/galleries/overlander/overlander-24.jpg">
-      <img src="/images/galleries/overlander/overlander-25.jpg">
-      <img src="/images/galleries/overlander/overlander-26.jpg">
-      <img src="/images/galleries/overlander/overlander-27.jpg">
-      <img src="/images/galleries/overlander/overlander-28.jpg">
-      <img src="/images/galleries/overlander/overlander-29.jpg">
-      <img src="/images/galleries/overlander/overlander-30.jpg">
-      <img src="/images/galleries/overlander/overlander-31.jpg">
-      <img src="/images/galleries/overlander/overlander-32.jpg">
-      <img src="/images/galleries/overlander/overlander-33.jpg">
-      <img src="/images/galleries/overlander/overlander-34.jpg">
-      <img src="/images/galleries/overlander/overlander-35.jpg">
-      <img src="/images/galleries/overlander/overlander-36.jpg">
-      <img src="/images/galleries/overlander/overlander-37.jpg">
-      <img src="/images/galleries/overlander/overlander-38.jpg">
-      <img src="/images/galleries/overlander/overlander-39.jpg">
-      <img src="/images/galleries/overlander/overlander-40.jpg">
-      <img src="/images/galleries/overlander/overlander-41.jpg">
-      <img src="/images/galleries/overlander/overlander-42.jpg">
-      <img src="/images/galleries/overlander/overlander-43.jpg">
-      <img src="/images/galleries/overlander/overlander-44.jpg">
-      <img src="/images/galleries/overlander/overlander-45.jpg">
-      <img src="/images/galleries/overlander/overlander-46.jpg">
-      <img src="/images/galleries/overlander/overlander-47.jpg">
-      <img src="/images/galleries/overlander/overlander-48.jpg">
-   </div>
-   </div>
-    <script>
-    $(function() {
-        // Initialize Galleria
-        Galleria.run('.galleria',{autoplay: 7000
-});
-    });
-    </script>
-    </div>
+
+<div class="container">
+  <div class="row m-b-3">
     <div class="col-sm-6">
       <h2>Overview</h2>
       <p>
-        The Bruiser Overlander is purpose built for the avid off road family.
-        Building upon the capabilities of the 4-door Jeep Wrangler, the
-        Overlander allows you to carry a crew of six adults to the most remote
-        locations they desire to explore, with ample cargo area for gear and
-        supplies.
+        The Hemi conversion is all about power, performance, and reliability.
+        The 500 horsepower / 500 foot pound 6.4L engine will make your Jeep
+        drive like a whole new ride. This engine is the same 6.4L Hemi 392 V-8
+        engine used in the SRT8 Jeep Cherokee and SRT8 Dodge Challenger. All of
+        our engines are brand new, crate engines. If you are looking for speed,
+        this is the conversion for you.
       </p>
 
-      <h2>Vehicle Design</h2>
+      <h2>Quality</h2>
       <p>
-        The Overlander is equipped with a 450 HP Bruiser Conversions LS3,
-        Teraflex long arm suspension, and Ultimate Dana 60 axles. It features
-        full-size front and rear doors for easy access to the cockpit and cabin.
-        The exterior of the body is clad in a complete GenRight Off Road bumper
-        and armor package, Warn Zeon 10s winch with Factor 55 UltraHook, with
-        TnT Customs aluminum skid plates to protect your vehicle while it's
-        being put to the test.
+        Conversions are completed using OEM quality parts. To break it down,
+        roughly 90 percent of the components in the conversion are from Mopar.
+        The other 10 percent are manufactured by established companies that want
+        to bring new life to your old ride. The battery tray/air box, throttle
+        body adapters, fan shroud for truck motors, motor mounts and
+        transmission mount are all designed using The latest in CAD design
+        technology and then constructed from high quality, laser cut steel.
+        They are formed on a CNC press brake and expertly assembled by certified
+        welders. All wiring harnesses are built by trained professionals and
+        computer tested before shipment for functionality.
       </p>
 
-      <h2>Pricing</h2>
+      <h2>Superchargers</h2>
       <p>
-        To customize your build or request pricing please contact us.
+        Horsepower gains with a supercharger are impressive. We can use
+        Magnuson, Kenne Bell and Edelbrock to name a few. Cost for this will
+        range from $8500 to $11,500 depending on your application and horsepower
+        you are looking for.
       </p>
+    </div>
+    <div class="col-sm-6">
+      <img src="/images/jeep-hemi-engine-conversion-002.jpg" class='img-fluid' />
     </div>
   </div><!-- row -->
 </div>
 
+<div class="bg-inverse">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 p-t-2">
+        <h2 class="m-b-2" style="text-align: center">Conversion Specs</h2>
+        <table class="table table-bordered table-inverse m-b-3">
+          <tr>
+            <td></td>
+            <td>5.7 Hemi VVT (WK)</td>
+            <td>5.7 Hemi VVT (Truck)</td>
+            <td>6.4L Hemi VVT</td>
+            <td>7.0L Hemi VVT</td>
+          </tr>
+          <tr>
+            <td>2012+ Wrangler (Automatic)</td>
+            <td>$22,500</td>
+            <td>$23,500</td>
+            <td>$29,500</td>
+            <td>$36,500</td>
+          </tr>
+          <tr>
+            <td>2012 Wrangler (Manual)</td>
+            <td>$25,500</td>
+            <td>$26,500</td>
+            <td>$32,500</td>
+            <td>$39,500</td>
+          </tr>
+          <tr>
+            <td>2007 - 2011 Wrangler (Automatic)</td>
+            <td>$22,500</td>
+            <td>$23,500</td>
+            <td>$29,500</td>
+            <td>$36,500</td>
+          </tr>
+          <tr>
+            <td>2007 - 2011 Wrangler (Manual)</td>
+            <td>$25,500</td>
+            <td>$26,500</td>
+            <td>$32,500</td>
+            <td>$39,500</td>
+          </tr>
+          <tr>
+            <td>Horsepower</td>
+            <td>375 HP @ 5800 rpm</td>
+            <td>405 HP @ 5800 rpm</td>
+            <td>500 HP @ 6000 rpm</td>
+            <td>610 HP @ 6000 rpm</td>
+          </tr>
+          <tr>
+            <td>Torque</td>
+            <td>390 ft. lbs. @ 4200 rpm</td>
+            <td>425 ft. lbs. @ 4200 rpm</td>
+            <td>500 ft. lbs. @ 4200 rpm</td>
+            <td>690 ft. lbs. @ 4200 rpm</td>
+          </tr>
+          <tr>
+            <td>Donor</td>
+            <td>Car (WK)</td>
+            <td>Ram 1500</td>
+            <td>SRT-8 Car / WK</td>
+            <td>SRT-8 Car / WK</td>
+          </tr>
+          <tr>
+            <td>Engine Warranty</td>
+            <td>3 year / 36,000 miles</td>
+            <td>3 year / 36,000 miles</td>
+            <td>3 year / 36,000 miles</td>
+            <td>3 year / 36,000 miles</td>
+          </tr>
+          <tr>
+            <td>Fuel Type</td>
+            <td>87</td>
+            <td>87</td>
+            <td>91</td>
+            <td>91</td>
+          </tr>
+        </table>
 
-      
+        <h2 class="m-b-2" style="text-align: center">Kit Pricing</h2>
+        <table class="table table-bordered table-inverse m-b-3">
+          <tr>
+            <td>2012 to 2016 6.4L ** Hemi Auto Package</td>
+            <td>$26,000</td>
+          </tr>
+          <tr>
+            <td>2012 to 2016 ** 6.4 Hemi Manual Package</td>
+            <td>$29,000</td>
+          </tr>
+          <tr>
+            <td>2012 to 2016 ** 5.7 Hemi WK Package</td>
+            <td>$19,000</td>
+          </tr>
+          <tr>
+            <td>2007 to 2011 ** 6.4 Hemi Auto Package (Comes with 545RFE transmission)</td>
+            <td>$26,000</td>
+          </tr>
+          <tr>
+            <td>2007 to 2011 ** 6.4 Hemi Manual Package (Comes with Getrag 238 6-speed transmission)</td>
+            <td>$29,000</td>
+          </tr>
+          <tr>
+            <td>2007 to 2011 ** 5.7 Hemi WK Auto Package (Comes with 545RFE transmission)</td>
+            <td>$19,000</td>
+          </tr>
+          <tr>
+            <td>2007 to 2011 ** 5.7 Hemi WK Manual Package (Comes with Getrag 238 6-speed transmission)</td>
+            <td>$22,000</td>
+          </tr>
+          <tr>
+            <td>2007 to 2011 ** 5.7 Truck Hemi Auto Package (Comes with 545RFE transmission)</td>
+            <td>$20,000</td>
+          </tr>
+          <tr>
+            <td>2007 to 2011 ** 5.7 Truck Hemi Manual Package (Comes with Getrag 238 6-speed transmission)</td>
+            <td>$23,000</td>
+          </tr>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
+
 
     <div class="container-fluid footer">
     <div class="row">
