--- a/public/reviews/index.html
+++ b/public/reviews/index.html
@@ -36,9 +36,9 @@
 
       <div class="dropdown-menu" aria-labelledby="power-menu-link">
         <h6 class="dropdown-header">Engine Conversions</h6>
-        <a href="/jeep-ls-conversions" class="dropdown-item">LS</a>
-        <a href="/jeep-hemi-conversions" class="dropdown-item">Hemi</a>
-        <a href="/jeep-diesel-conversions" class="dropdown-item">Diesel</a>
+        <a href="/jeep-ls-conversion" class="dropdown-item">LS</a>
+        <a href="/jeep-hemi-conversion" class="dropdown-item">Hemi</a>
+        <a href="/jeep-diesel-conversion" class="dropdown-item">Diesel</a>
         <div class="dropdown-divider"></div>
         <a href="/certified-installation-facilities" class="dropdown-item">Certified Installation Facilities</a>
       </div>
@@ -813,13 +813,13 @@
         <div class="nav-title">Power</div>
         <ul class="nav">
           <li class="nav-item">
-            <a href="/jeep-ls-conversions">LS</a>
+            <a href="/jeep-ls-conversion">LS</a>
           </li>
           <li class="nav-item">
-            <a href="/jeep-hemi-conversions">Hemi</a>
+            <a href="/jeep-hemi-conversion">Hemi</a>
           </li>
           <li class="nav-item">
-            <a href="/jeep-diesel-conversions">Diesel</a>
+            <a href="/jeep-diesel-conversion">Diesel</a>
           </li>
         </ul>
       </div>
