--- a/content/contact/_index.html
+++ b/content/contact/_index.html
@@ -1,3 +1,9 @@
+---
+title: Contact Us
+aliases:
+    - /contact-us
+---
+
 <div class="cover">
   <img src="/images/contact-us-004.jpg" style="position: absolute; bottom: -150px;" />
 </div>
