--- a/content/index.html
+++ b/content/index.html
@@ -2,6 +2,7 @@
 url: index.html
 aliases:
     - /test-2
+    - /services
 ---
 
 <div id="home-carousel" class="carousel slide carousel-fade cover" data-ride="carousel">
