--- a/content/jeep-ls-conversion/_index.html
+++ b/content/jeep-ls-conversion/_index.html
@@ -1,5 +1,8 @@
 ---
 title: Jeep Wrangler LS Conversions
+aliases:
+    - /test-2
+    - /jeep-wrangler-ls-conversion-kit
 ---
 
 <div class="cover">
