--- a/content/jk-crew/_index.html
+++ b/content/jk-crew/_index.html
@@ -1,3 +1,9 @@
+---
+title: Jeep Truck Conversion
+aliases:
+    - /jeep-wrangler-truck-conversion
+---
+
 <div class="cover">
   <h1 style="margin-top: 200px">JK Crew Conversion</h1>
   <img src="/images/jk-crew-conversion-002.jpg" style="position: absolute; bottom: -100px;" />
@@ -6,7 +12,7 @@
 <div class="container">
   <div class="row m-b-3">
     <div class="col-sm-6">
-<div class="galleria">              
+<div class="galleria">
       <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-1.jpg">
       <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-2.jpg">
       <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-3.jpg">
