--- a/content/overlander/_index.html
+++ b/content/overlander/_index.html
@@ -1,3 +1,9 @@
+---
+title: Bruiser Overlander
+aliases:
+    - /bruiser-overlander
+---
+
 <div class="cover">
   <h1>Jeep Overlander Conversion</h1>
   <img src="/images/overlander-main.jpg" style='position: absolute; bottom: -75px;' />
@@ -6,7 +12,7 @@
   	<div class="row m-b-3">
     <div class="col-sm-6">
      <div class="img-fluid">
-      <div class="galleria">              
+      <div class="galleria">
       <img src="/images/galleries/overlander/overlander-1.jpg">
       <img src="/images/galleries/overlander/overlander-2.jpg">
       <img src="/images/galleries/overlander/overlander-3.jpg">
@@ -92,6 +98,3 @@
     </div>
   </div><!-- row -->
 </div>
-
-
-      
