--- a/public/feed/index.html
+++ b/public/feed/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <title></title>
+  <title>Bruiser Conversions Feed</title>
 <link rel="stylesheet" media="all" href="/css/bootstrap.css"/>
 <link rel="stylesheet" media="all" href="/css/font-awesome.min.css"/>
 <link rel="stylesheet" media="all" href="/css/application.css"/>
