--- a/public/jk-crew/index.html
+++ b/public/jk-crew/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <title></title>
+  <title>Jeep Truck Conversion</title>
 <link rel="stylesheet" media="all" href="/css/bootstrap.css"/>
 <link rel="stylesheet" media="all" href="/css/font-awesome.min.css"/>
 <link rel="stylesheet" media="all" href="/css/application.css"/>
@@ -80,7 +80,7 @@
 <div class="container">
   <div class="row m-b-3">
     <div class="col-sm-6">
-<div class="galleria">              
+<div class="galleria">
       <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-1.jpg">
       <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-2.jpg">
       <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-3.jpg">
