--- a/public/overlander/index.html
+++ b/public/overlander/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <title></title>
+  <title>Bruiser Overlander</title>
 <link rel="stylesheet" media="all" href="/css/bootstrap.css"/>
 <link rel="stylesheet" media="all" href="/css/font-awesome.min.css"/>
 <link rel="stylesheet" media="all" href="/css/application.css"/>
@@ -80,7 +80,7 @@
   	<div class="row m-b-3">
     <div class="col-sm-6">
      <div class="img-fluid">
-      <div class="galleria">              
+      <div class="galleria">
       <img src="/images/galleries/overlander/overlander-1.jpg">
       <img src="/images/galleries/overlander/overlander-2.jpg">
       <img src="/images/galleries/overlander/overlander-3.jpg">
@@ -167,8 +167,6 @@
   </div><!-- row -->
 </div>
 
-
-      
 
     <div class="container-fluid footer">
     <div class="row">
