--- a/content/index.html
+++ b/content/index.html
@@ -3,6 +3,9 @@ url: index.html
 aliases:
     - /test-2
     - /services
+    - /tag/jeep
+    - /author/aleblanc
+    - /2012/*
 ---
 
 <div id="home-carousel" class="carousel slide carousel-fade cover" data-ride="carousel">
