--- a/content/jeep-diesel-conversion/_index.html
+++ b/content/jeep-diesel-conversion/_index.html
@@ -1,5 +1,10 @@
 ---
 title: Jeep Wrangler Diesel Conversions
+aliases:
+    - /jeep-wrangler-cummins-isf-diesel-conversion
+    - /jeep-wrangler-diesel-conversion
+    - /pages/diesel_conversions
+    - /jeep-wrangler-diesel-conversion-kit
 ---
 
 <div class="cover">
