--- a/content/jk-crew/_index.html
+++ b/content/jk-crew/_index.html
@@ -2,6 +2,8 @@
 title: Jeep Truck Conversion
 aliases:
     - /jeep-wrangler-truck-conversion
+    - /jk-crew/jeep-wrangler-truck-conversion
+    - /jk-crew-green
 ---
 
 <div class="cover">
