--- a/content/reviews/_index.html
+++ b/content/reviews/_index.html
@@ -1,4 +1,9 @@
-<div class="cover">
+---
+aliases:
+    -  /pages/reviews
+---
+
+ <div class="cover">
   <h1>Bruiser Conversion Reviews</h1>
   <img src="/images/bruiser-conversion-reviews-002.jpg" style="position: absolute; bottom: -105px;" />
 </div>
