--- a/content/jeep-ls-conversion/_index.html
+++ b/content/jeep-ls-conversion/_index.html
@@ -3,6 +3,8 @@ title: Jeep Wrangler LS Conversions
 aliases:
     - /test-2
     - /jeep-wrangler-ls-conversion-kit
+    - /jeep-wrangler-ls-conversions
+    - /jeep-wrangler-ls-conversion
 ---
 
 <div class="cover">
