Update more aliases

--- a/content/index.html
+++ b/content/index.html
@@ -5,7 +5,7 @@ aliases:
     - /services
     - /tag/jeep
     - /author/aleblanc
-    - /2012/*
+    - /blog/2013/02/jeep-wrangler-diesel/wrangler-diesel-conversion-28/
 ---
 
 <div id="home-carousel" class="carousel slide carousel-fade cover" data-ride="carousel">
