--- a/content/jeep-diesel-conversion/_index.html
+++ b/content/jeep-diesel-conversion/_index.html
@@ -5,6 +5,12 @@ aliases:
     - /jeep-wrangler-diesel-conversion
     - /pages/diesel_conversions
     - /jeep-wrangler-diesel-conversion-kit
+    - /2012/01/30/red-rock-diesel-bruiser
+    - /2012/06/18/nhs-jeep-tj-diesel-conversion
+    - /2012/10/05/jeep-tj-diesel-conversion
+    - /2014/06/27/jeep-wrangler-diesel-conversion-lee
+    
+    
 ---
 
 <div class="cover">
