--- a/content/jk-crew/_index.html
+++ b/content/jk-crew/_index.html
@@ -4,6 +4,7 @@ aliases:
     - /jeep-wrangler-truck-conversion
     - /jk-crew/jeep-wrangler-truck-conversion
     - /jk-crew-green
+    - /2015/02/17/jk-crew-bruiser-conversions
 ---
 
 <div class="cover">
