--- a/content/feed/_index.html
+++ b/content/feed/_index.html
@@ -1,8 +1,9 @@
 ---
-title: Bruiser Conversions Feed
+title: Bruiser Conversions Social Feed
+description: Bruiser Conversions Social Media Feed
 aliases:
     - /news
-    - /blog*
+    - /blog
 ---
 
 <div class="cover">
