--- a/content/index.html
+++ b/content/index.html
@@ -17,13 +17,13 @@ aliases:
     <div class="carousel-item active">
       <a href="/jeep-ls-conversion">
         <div class="title">LS Engine Conversion</div>
-        <img src="images/jeep-ls-engine-conversion-002.jpg" />
+        <img src="images/jeep-ls-engine-conversion-002.jpg" alt="LS Engine Conversion" />
       </a>
     </div>
     <div class="carousel-item">
       <a href="/jk-crew">
         <div class="title">JK Crew Conversion</div>
-        <img src="images/jk-crew-conversion-005.jpg" />
+        <img src="images/jk-crew-conversion-005.jpg" alt="JK Crew Conversion" />
       </a>
     </div>
   </div>
