--- a/content/jeep-diesel-conversion/_index.html
+++ b/content/jeep-diesel-conversion/_index.html
@@ -1,5 +1,6 @@
 ---
 title: Jeep Wrangler Diesel Conversions
+description: Jeep Wrangler Diesel Conversions
 aliases:
     - /jeep-wrangler-cummins-isf-diesel-conversion
     - /jeep-wrangler-diesel-conversion
@@ -15,13 +16,13 @@ aliases:
 
 <div class="cover">
   <h1>Jeep Wrangler Diesel Conversion</h1>
-  <img src="/images/jeep-diesel-engine-conversion-001.jpg" style="position: absolute; bottom: 0;" />
+  <img src="/images/jeep-diesel-engine-conversion-001.jpg" alt="Jeep Wrangler Diesel Conversions" style="position: absolute; bottom: 0;" />
 </div>
 
 <div class="container">
   <div class="row m-b-3">
     <div class="col-sm-6">
-      <img src="/images/jeep-diesel-engine-conversion-003.jpg" class="img-fluid" />
+      <img src="/images/jeep-diesel-engine-conversion-003.jpg" alt="Jeep Wrangler Diesel Conversions" class="img-fluid" />
     </div>
     <div class="col-sm-6">
       <h2>Overview</h2>
@@ -54,7 +55,7 @@ aliases:
       </p>
     </div>
     <div class="col-sm-6">
-      <img src="/images/jeep-diesel-engine-conversion-004.jpg" class= "img-fluid" />
+      <img src="/images/jeep-diesel-engine-conversion-004.jpg" alt="Jeep Wrangler Diesel Conversions" class= "img-fluid" />
     </div>
   </div>
 </div>
