--- a/content/super-cab/_index.html
+++ b/content/super-cab/_index.html
@@ -1,39 +1,44 @@
+---
+title: Jeep Truck Super Cab Conversion
+description: Jeep Truck Super Cab Conversion
+
+---
  <div class="cover">
   <h1 style="margin-top: 200px">Super Cab Conversion</h1>
-  <img src="/images/jeep-super-cab-001.jpg" style="position: absolute; bottom: -100px;" />
+  <img src="/images/jeep-super-cab-001.jpg" alt="Super Cab Conversion" style="position: absolute; bottom: -100px;" />
 </div>
 
 <div class="container">
   <div class="row m-b-3">
     <div class="col-sm-6">
       <div class="galleria">              
-      <img src="/images/galleries/super-cab/super-cab-1.jpg">
-      <img src="/images/galleries/super-cab/super-cab-2.jpg">
-      <img src="/images/galleries/super-cab/super-cab-3.jpg">
-      <img src="/images/galleries/super-cab/super-cab-4.jpg">
-      <img src="/images/galleries/super-cab/super-cab-5.jpg">
-      <img src="/images/galleries/super-cab/super-cab-6.jpg">
-      <img src="/images/galleries/super-cab/super-cab-7.jpg">
-      <img src="/images/galleries/super-cab/super-cab-8.jpg">
-      <img src="/images/galleries/super-cab/super-cab-9.jpg">
-      <img src="/images/galleries/super-cab/super-cab-10.jpg">
-      <img src="/images/galleries/super-cab/super-cab-11.jpg">
-      <img src="/images/galleries/super-cab/super-cab-12.jpg">
-      <img src="/images/galleries/super-cab/super-cab-13.jpg">
-      <img src="/images/galleries/super-cab/super-cab-14.jpg">
-      <img src="/images/galleries/super-cab/super-cab-15.jpg">
-      <img src="/images/galleries/super-cab/super-cab-16.jpg">
-      <img src="/images/galleries/super-cab/super-cab-17.jpg">
-      <img src="/images/galleries/super-cab/super-cab-18.jpg">
-      <img src="/images/galleries/super-cab/super-cab-19.jpg">
-      <img src="/images/galleries/super-cab/super-cab-21.jpg">
-      <img src="/images/galleries/super-cab/super-cab-22.jpg">
-      <img src="/images/galleries/super-cab/super-cab-23.jpg">
-      <img src="/images/galleries/super-cab/super-cab-24.jpg">
-      <img src="/images/galleries/super-cab/super-cab-25.jpg">
-      <img src="/images/galleries/super-cab/super-cab-26.jpg">
-      <img src="/images/galleries/super-cab/super-cab-27.jpg">
-      <img src="/images/galleries/super-cab/super-cab-28.jpg">
+      <img src="/images/galleries/super-cab/super-cab-1.jpg" alt="Super Cab Conversion">
+      <img src="/images/galleries/super-cab/super-cab-2.jpg" alt="Super Cab Conversion">
+      <img src="/images/galleries/super-cab/super-cab-3.jpg" alt="Super Cab Conversion">
+      <img src="/images/galleries/super-cab/super-cab-4.jpg" alt="Super Cab Conversion">
+      <img src="/images/galleries/super-cab/super-cab-5.jpg" alt="Super Cab Conversion">
+      <img src="/images/galleries/super-cab/super-cab-6.jpg" alt="Super Cab Conversion">
+      <img src="/images/galleries/super-cab/super-cab-7.jpg" alt="Super Cab Conversion">
+      <img src="/images/galleries/super-cab/super-cab-8.jpg" alt="Super Cab Conversion">
+      <img src="/images/galleries/super-cab/super-cab-9.jpg" alt="Super Cab Conversion">
+      <img src="/images/galleries/super-cab/super-cab-10.jpg" alt="Super Cab Conversion">
+      <img src="/images/galleries/super-cab/super-cab-11.jpg" alt="Super Cab Conversion">
+      <img src="/images/galleries/super-cab/super-cab-12.jpg" alt="Super Cab Conversion">
+      <img src="/images/galleries/super-cab/super-cab-13.jpg" alt="Super Cab Conversion">
+      <img src="/images/galleries/super-cab/super-cab-14.jpg" alt="Super Cab Conversion">
+      <img src="/images/galleries/super-cab/super-cab-15.jpg" alt="Super Cab Conversion">
+      <img src="/images/galleries/super-cab/super-cab-16.jpg" alt="Super Cab Conversion">
+      <img src="/images/galleries/super-cab/super-cab-17.jpg" alt="Super Cab Conversion">
+      <img src="/images/galleries/super-cab/super-cab-18.jpg" alt="Super Cab Conversion">
+      <img src="/images/galleries/super-cab/super-cab-19.jpg" alt="Super Cab Conversion">
+      <img src="/images/galleries/super-cab/super-cab-21.jpg" alt="Super Cab Conversion">
+      <img src="/images/galleries/super-cab/super-cab-22.jpg" alt="Super Cab Conversion">
+      <img src="/images/galleries/super-cab/super-cab-23.jpg" alt="Super Cab Conversion">
+      <img src="/images/galleries/super-cab/super-cab-24.jpg" alt="Super Cab Conversion">
+      <img src="/images/galleries/super-cab/super-cab-25.jpg" alt="Super Cab Conversion">
+      <img src="/images/galleries/super-cab/super-cab-26.jpg" alt="Super Cab Conversion">
+      <img src="/images/galleries/super-cab/super-cab-27.jpg" alt="Super Cab Conversion">
+      <img src="/images/galleries/super-cab/super-cab-28.jpg" alt="Super Cab Conversion">
    </div>
     <script>
     $(function() {
