--- a/public/certified-installation-facilities/index.html
+++ b/public/certified-installation-facilities/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <title></title>
+<meta name="description" content="Bruiser Conversions Jeep Wrangler LS Conversion Kit Certified Installation Facilities">
 <link rel="stylesheet" media="all" href="/css/bootstrap.css"/>
 <link rel="stylesheet" media="all" href="/css/font-awesome.min.css"/>
 <link rel="stylesheet" media="all" href="/css/application.css"/>
@@ -74,7 +75,7 @@
     
   <div class="cover">
   <h1>Certified Installation Facilities</h1>
-  <img src="/images/certified-installation-facilities-002.jpg" style="position: absolute; bottom: -300px;" />
+  <img src="/images/certified-installation-facilities-002.jpg" alt="LS Conversion Kit" style="position: absolute; bottom: -300px;" />
 </div>
 
 <div class="container">
