--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <title>Contact Us</title>
+  <title>Contact Us - Bruiser Conversions</title>
+<meta name="description" content="Contact Bruiser Conversions">
 <link rel="stylesheet" media="all" href="/css/bootstrap.css"/>
 <link rel="stylesheet" media="all" href="/css/font-awesome.min.css"/>
 <link rel="stylesheet" media="all" href="/css/application.css"/>
@@ -73,7 +74,7 @@
 
     
   <div class="cover">
-  <img src="/images/contact-us-004.jpg" style="position: absolute; bottom: -150px;" />
+  <img src="/images/contact-us-004.jpg" alt="Contact Bruiser Conversions" style="position: absolute; bottom: -150px;" />
 </div>
 
 <div class="container m-b-3">
