--- a/public/feed/index.html
+++ b/public/feed/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <title>Bruiser Conversions Feed</title>
+  <title>Bruiser Conversions Social Feed</title>
+<meta name="description" content="Bruiser Conversions Social Media Feed">
 <link rel="stylesheet" media="all" href="/css/bootstrap.css"/>
 <link rel="stylesheet" media="all" href="/css/font-awesome.min.css"/>
 <link rel="stylesheet" media="all" href="/css/application.css"/>
