--- a/public/jeep-diesel-conversion/index.html
+++ b/public/jeep-diesel-conversion/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <title>Jeep Wrangler Diesel Conversions</title>
+<meta name="description" content="Jeep Wrangler Diesel Conversions">
 <link rel="stylesheet" media="all" href="/css/bootstrap.css"/>
 <link rel="stylesheet" media="all" href="/css/font-awesome.min.css"/>
 <link rel="stylesheet" media="all" href="/css/application.css"/>
@@ -74,13 +75,13 @@
     
   <div class="cover">
   <h1>Jeep Wrangler Diesel Conversion</h1>
-  <img src="/images/jeep-diesel-engine-conversion-001.jpg" style="position: absolute; bottom: 0;" />
+  <img src="/images/jeep-diesel-engine-conversion-001.jpg" alt="Jeep Wrangler Diesel Conversions" style="position: absolute; bottom: 0;" />
 </div>
 
 <div class="container">
   <div class="row m-b-3">
     <div class="col-sm-6">
-      <img src="/images/jeep-diesel-engine-conversion-003.jpg" class="img-fluid" />
+      <img src="/images/jeep-diesel-engine-conversion-003.jpg" alt="Jeep Wrangler Diesel Conversions" class="img-fluid" />
     </div>
     <div class="col-sm-6">
       <h2>Overview</h2>
@@ -113,7 +114,7 @@
       </p>
     </div>
     <div class="col-sm-6">
-      <img src="/images/jeep-diesel-engine-conversion-004.jpg" class= "img-fluid" />
+      <img src="/images/jeep-diesel-engine-conversion-004.jpg" alt="Jeep Wrangler Diesel Conversions" class= "img-fluid" />
     </div>
   </div>
 </div>
