--- a/content/certified-installation-facilities/_index.html
+++ b/content/certified-installation-facilities/_index.html
@@ -1,6 +1,9 @@
-<div class="cover">
+---
+description: Bruiser Conversions Jeep Wrangler LS Conversion Kit Certified Installation Facilities
+---
+ <div class="cover">
   <h1>Certified Installation Facilities</h1>
-  <img src="/images/certified-installation-facilities-002.jpg" style="position: absolute; bottom: -300px;" />
+  <img src="/images/certified-installation-facilities-002.jpg" alt="LS Conversion Kit" style="position: absolute; bottom: -300px;" />
 </div>
 
 <div class="container">
