--- a/content/contact/_index.html
+++ b/content/contact/_index.html
@@ -1,11 +1,12 @@
 ---
-title: Contact Us
+title: Contact Us - Bruiser Conversions
+description: Contact Bruiser Conversions
 aliases:
     - /contact-us
 ---
 
 <div class="cover">
-  <img src="/images/contact-us-004.jpg" style="position: absolute; bottom: -150px;" />
+  <img src="/images/contact-us-004.jpg" alt="Contact Bruiser Conversions" style="position: absolute; bottom: -150px;" />
 </div>
 
 <div class="container m-b-3">
