--- a/content/jeep-hemi-conversion/_index.html
+++ b/content/jeep-hemi-conversion/_index.html
@@ -1,12 +1,13 @@
 ---
 title: Jeep Wrangler Hemi Conversions
+description: Jeep Wrangler Hemi Conversions
 aliases:
     - /pages/hemi_conversions
 ---
 
 <div class="cover">
   <h1>Jeep Wrangler Hemi Conversion</h1>
-  <img src="/images/jeep-hemi-engine-conversion-001.jpg" style="position: absolute; bottom: -100px;" />
+  <img src="/images/jeep-hemi-engine-conversion-001.jpg" alt="Jeep Wrangler Hemi Conversions" style="position: absolute; bottom: -100px;" />
 </div>
 
 <div class="container">
@@ -45,7 +46,7 @@ aliases:
       </p>
     </div>
     <div class="col-sm-6">
-      <img src="/images/jeep-hemi-engine-conversion-002.jpg" class='img-fluid' />
+      <img src="/images/jeep-hemi-engine-conversion-002.jpg" alt="Jeep Wrangler Hemi Conversions" class='img-fluid' />
     </div>
   </div><!-- row -->
 </div>
