--- a/content/overlander/_index.html
+++ b/content/overlander/_index.html
@@ -1,5 +1,6 @@
 ---
 title: Bruiser Overlander
+description: Bruiser Overlander Jeep
 aliases:
     - /bruiser-overlander
     - /pages/body/overlander
@@ -7,60 +8,60 @@ aliases:
 
 <div class="cover">
   <h1>Jeep Overlander Conversion</h1>
-  <img src="/images/overlander-main.jpg" style='position: absolute; bottom: -75px;' />
+  <img src="/images/overlander-main.jpg" alt="Bruiser Overlander Jeep" style='position: absolute; bottom: -75px;' />
 </div>
  	<div class="container">
   	<div class="row m-b-3">
     <div class="col-sm-6">
      <div class="img-fluid">
       <div class="galleria">
-      <img src="/images/galleries/overlander/overlander-1.jpg">
-      <img src="/images/galleries/overlander/overlander-2.jpg">
-      <img src="/images/galleries/overlander/overlander-3.jpg">
-      <img src="/images/galleries/overlander/overlander-4.jpg">
-      <img src="/images/galleries/overlander/overlander-5.jpg">
-      <img src="/images/galleries/overlander/overlander-6.jpg">
-      <img src="/images/galleries/overlander/overlander-7.jpg">
-      <img src="/images/galleries/overlander/overlander-8.jpg">
-      <img src="/images/galleries/overlander/overlander-9.jpg">
-      <img src="/images/galleries/overlander/overlander-10.jpg">
-      <img src="/images/galleries/overlander/overlander-11.jpg">
-      <img src="/images/galleries/overlander/overlander-12.jpg">
-      <img src="/images/galleries/overlander/overlander-13.jpg">
-      <img src="/images/galleries/overlander/overlander-14.jpg">
-      <img src="/images/galleries/overlander/overlander-15.jpg">
-      <img src="/images/galleries/overlander/overlander-16.jpg">
-      <img src="/images/galleries/overlander/overlander-17.jpg">
-      <img src="/images/galleries/overlander/overlander-18.jpg">
-      <img src="/images/galleries/overlander/overlander-19.jpg">
-      <img src="/images/galleries/overlander/overlander-21.jpg">
-      <img src="/images/galleries/overlander/overlander-22.jpg">
-      <img src="/images/galleries/overlander/overlander-23.jpg">
-      <img src="/images/galleries/overlander/overlander-24.jpg">
-      <img src="/images/galleries/overlander/overlander-25.jpg">
-      <img src="/images/galleries/overlander/overlander-26.jpg">
-      <img src="/images/galleries/overlander/overlander-27.jpg">
-      <img src="/images/galleries/overlander/overlander-28.jpg">
-      <img src="/images/galleries/overlander/overlander-29.jpg">
-      <img src="/images/galleries/overlander/overlander-30.jpg">
-      <img src="/images/galleries/overlander/overlander-31.jpg">
-      <img src="/images/galleries/overlander/overlander-32.jpg">
-      <img src="/images/galleries/overlander/overlander-33.jpg">
-      <img src="/images/galleries/overlander/overlander-34.jpg">
-      <img src="/images/galleries/overlander/overlander-35.jpg">
-      <img src="/images/galleries/overlander/overlander-36.jpg">
-      <img src="/images/galleries/overlander/overlander-37.jpg">
-      <img src="/images/galleries/overlander/overlander-38.jpg">
-      <img src="/images/galleries/overlander/overlander-39.jpg">
-      <img src="/images/galleries/overlander/overlander-40.jpg">
-      <img src="/images/galleries/overlander/overlander-41.jpg">
-      <img src="/images/galleries/overlander/overlander-42.jpg">
-      <img src="/images/galleries/overlander/overlander-43.jpg">
-      <img src="/images/galleries/overlander/overlander-44.jpg">
-      <img src="/images/galleries/overlander/overlander-45.jpg">
-      <img src="/images/galleries/overlander/overlander-46.jpg">
-      <img src="/images/galleries/overlander/overlander-47.jpg">
-      <img src="/images/galleries/overlander/overlander-48.jpg">
+      <img src="/images/galleries/overlander/overlander-1.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-2.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-3.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-4.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-5.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-6.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-7.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-8.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-9.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-10.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-11.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-12.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-13.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-14.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-15.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-16.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-17.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-18.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-19.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-21.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-22.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-23.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-24.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-25.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-26.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-27.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-28.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-29.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-30.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-31.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-32.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-33.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-34.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-35.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-36.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-37.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-38.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-39.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-40.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-41.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-42.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-43.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-44.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-45.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-46.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-47.jpg" alt="Bruiser Overlander Jeep">
+      <img src="/images/galleries/overlander/overlander-48.jpg" alt="Bruiser Overlander Jeep">
    </div>
    </div>
     <script>
