--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <title>Bruiser Conversions</title>
+<meta name="description" content="">
 <link rel="stylesheet" media="all" href="/css/bootstrap.css"/>
 <link rel="stylesheet" media="all" href="/css/font-awesome.min.css"/>
 <link rel="stylesheet" media="all" href="/css/application.css"/>
@@ -82,13 +83,13 @@
     <div class="carousel-item active">
       <a href="/jeep-ls-conversion">
         <div class="title">LS Engine Conversion</div>
-        <img src="images/jeep-ls-engine-conversion-002.jpg" />
+        <img src="images/jeep-ls-engine-conversion-002.jpg" alt="LS Engine Conversion" />
       </a>
     </div>
     <div class="carousel-item">
       <a href="/jk-crew">
         <div class="title">JK Crew Conversion</div>
-        <img src="images/jk-crew-conversion-005.jpg" />
+        <img src="images/jk-crew-conversion-005.jpg" alt="JK Crew Conversion" />
       </a>
     </div>
   </div>
