--- a/public/jeep-hemi-conversion/index.html
+++ b/public/jeep-hemi-conversion/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <title>Jeep Wrangler Hemi Conversions</title>
+<meta name="description" content="Jeep Wrangler Hemi Conversions">
 <link rel="stylesheet" media="all" href="/css/bootstrap.css"/>
 <link rel="stylesheet" media="all" href="/css/font-awesome.min.css"/>
 <link rel="stylesheet" media="all" href="/css/application.css"/>
@@ -74,7 +75,7 @@
     
   <div class="cover">
   <h1>Jeep Wrangler Hemi Conversion</h1>
-  <img src="/images/jeep-hemi-engine-conversion-001.jpg" style="position: absolute; bottom: -100px;" />
+  <img src="/images/jeep-hemi-engine-conversion-001.jpg" alt="Jeep Wrangler Hemi Conversions" style="position: absolute; bottom: -100px;" />
 </div>
 
 <div class="container">
@@ -113,7 +114,7 @@
       </p>
     </div>
     <div class="col-sm-6">
-      <img src="/images/jeep-hemi-engine-conversion-002.jpg" class='img-fluid' />
+      <img src="/images/jeep-hemi-engine-conversion-002.jpg" alt="Jeep Wrangler Hemi Conversions" class='img-fluid' />
     </div>
   </div><!-- row -->
 </div>
