--- a/public/jeep-ls-conversion/index.html
+++ b/public/jeep-ls-conversion/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <title>Jeep Wrangler LS Conversions</title>
+<meta name="description" content="Jeep Wrangler LS Conversion Kit">
 <link rel="stylesheet" media="all" href="/css/bootstrap.css"/>
 <link rel="stylesheet" media="all" href="/css/font-awesome.min.css"/>
 <link rel="stylesheet" media="all" href="/css/application.css"/>
@@ -74,41 +75,41 @@
     
   <div class="cover">
   <h1>Jeep Wrangler LS Conversion</h1>
-  <img src="/images/jeep-ls-engine-conversion-001.jpg" style='position: absolute; bottom: -75px;' />
+  <img src="/images/jeep-ls-engine-conversion-001.jpg" alt="Jeep Wrangler LS Conversion Kit" style='position: absolute; bottom: -75px;' />
 </div>
 
 <div class="container">
 	<div class="row m-b-3">
     <div class="col-sm-6">
        <div class="galleria">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-1.jpg">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-2.jpg">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-3.jpg">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-4.jpg">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-5.jpg">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-6.jpg">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-7.jpg">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-8.jpg">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-9.jpg">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-10.jpg">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-11.jpg">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-12.jpg">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-14.jpg">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-15.jpg">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-16.jpg">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-17.jpg">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-18.jpg">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-19.jpg">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-20.jpg">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-21.jpg">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-22.jpg">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-23.jpg">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-24.jpg">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-25.jpg">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-26.jpg">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-27.jpg">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-28.jpg">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-29.jpg">
+      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-1.jpg" alt="Jeep Wrangler LS XConversion">
+      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-2.jpg" alt="Jeep Wrangler LS Conversion">
+      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-3.jpg" alt="Jeep Wrangler LS Conversion">
+      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-4.jpg" alt="Jeep Wrangler LS Conversion">
+      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-5.jpg" alt="Jeep Wrangler LS Conversion">
+      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-6.jpg" alt="Jeep Wrangler LS Conversion">
+      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-7.jpg" alt="Jeep Wrangler LS Conversion">
+      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-8.jpg" alt="Jeep Wrangler LS Conversion">
+      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-9.jpg" alt="Jeep Wrangler LS Conversion">
+      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-10.jpg" alt="Jeep Wrangler LS Conversion">
+      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-11.jpg" alt="Jeep Wrangler LS Conversion">
+      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-12.jpg" alt="Jeep Wrangler LS Conversion">
+      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-14.jpg" alt="Jeep Wrangler LS Conversion">
+      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-15.jpg" alt="Jeep Wrangler LS Conversion">
+      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-16.jpg" alt="Jeep Wrangler LS Conversion">
+      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-17.jpg" alt="Jeep Wrangler LS Conversion">
+      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-18.jpg" alt="Jeep Wrangler LS Conversion">
+      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-19.jpg" alt="Jeep Wrangler LS Conversion">
+      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-20.jpg" alt="Jeep Wrangler LS Conversion">
+      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-21.jpg" alt="Jeep Wrangler LS Conversion">
+      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-22.jpg" alt="Jeep Wrangler LS Conversion">
+      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-23.jpg" alt="Jeep Wrangler LS Conversion">
+      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-24.jpg" alt="Jeep Wrangler LS Conversion">
+      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-25.jpg" alt="Jeep Wrangler LS Conversion">
+      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-26.jpg" alt="Jeep Wrangler LS Conversion">
+      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-27.jpg" alt="Jeep Wrangler LS Conversion">
+      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-28.jpg" alt="Jeep Wrangler LS Conversion">
+      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-29.jpg" alt="Jeep Wrangler LS Conversion">
    </div>
     <script>
     $(function() {
@@ -205,7 +206,7 @@
       </p>
 		</div>
     <div class="col-sm-6">
-      <img src="/images/jeep-ls-engine-conversion-002.jpg" class="img-fluid" />
+      <img src="/images/jeep-ls-engine-conversion-002.jpg" alt="Jeep Wrangler LS Conversion Kit" class="img-fluid" />
     </div>
   </div>
 </div>
