--- a/public/jk-crew/index.html
+++ b/public/jk-crew/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <title>Jeep Truck Conversion</title>
+  <title>Jeep Truck JK Crew Conversion</title>
+<meta name="description" content="Jeep Truck JK Crew Conversion">
 <link rel="stylesheet" media="all" href="/css/bootstrap.css"/>
 <link rel="stylesheet" media="all" href="/css/font-awesome.min.css"/>
 <link rel="stylesheet" media="all" href="/css/application.css"/>
@@ -74,61 +75,61 @@
     
   <div class="cover">
   <h1 style="margin-top: 200px">JK Crew Conversion</h1>
-  <img src="/images/jk-crew-conversion-002.jpg" style="position: absolute; bottom: -100px;" />
+  <img src="/images/jk-crew-conversion-002.jpg" alt="JK Crew Conversion" style="position: absolute; bottom: -100px;" />
 </div>
 
 <div class="container">
   <div class="row m-b-3">
     <div class="col-sm-6">
 <div class="galleria">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-1.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-2.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-3.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-4.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-5.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-6.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-7.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-8.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-9.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-10.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-11.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-12.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-13.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-14.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-15.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-16.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-17.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-18.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-19.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-20.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-21.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-22.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-23.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-24.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-26.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-27.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-28.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-29.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-30.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-31.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-32.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-33.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-34.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-35.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-36.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-37.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-38.jpg">
-      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-39.jpg">
-      <img src="/images/galleries/jk-crew-tan/jk-crew-tan-1.jpg">
-      <img src="/images/galleries/jk-crew-tan/jk-crew-tan-2.jpg">
-      <img src="/images/galleries/jk-crew-tan/jk-crew-tan-3.jpg">
-      <img src="/images/galleries/jk-crew-tan/jk-crew-tan-4.jpg">
-      <img src="/images/galleries/jk-crew-tan/jk-crew-tan-5.jpg">
-      <img src="/images/galleries/jk-crew-tan/jk-crew-tan-6.jpg">
-      <img src="/images/galleries/jk-crew-tan/jk-crew-tan-7.jpg">
-      <img src="/images/galleries/jk-crew-tan/jk-crew-tan-8.jpg">
-      <img src="/images/galleries/jk-crew-tan/jk-crew-tan-9.jpg">
-      <img src="/images/galleries/jk-crew-tan/jk-crew-tan-10.jpg">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-1.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-2.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-3.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-4.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-5.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-6.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-7.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-8.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-9.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-10.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-11.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-12.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-13.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-14.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-15.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-16.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-17.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-18.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-19.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-20.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-21.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-22.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-23.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-24.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-26.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-27.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-28.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-29.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-30.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-31.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-32.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-33.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-34.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-35.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-36.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-37.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-38.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/green-linex-jk-crew/green-linex-jk-crew-39.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/jk-crew-tan/jk-crew-tan-1.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/jk-crew-tan/jk-crew-tan-2.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/jk-crew-tan/jk-crew-tan-3.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/jk-crew-tan/jk-crew-tan-4.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/jk-crew-tan/jk-crew-tan-5.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/jk-crew-tan/jk-crew-tan-6.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/jk-crew-tan/jk-crew-tan-7.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/jk-crew-tan/jk-crew-tan-8.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/jk-crew-tan/jk-crew-tan-9.jpg" alt="JK Crew Conversion">
+      <img src="/images/galleries/jk-crew-tan/jk-crew-tan-10.jpg" alt="JK Crew Conversion">
    </div>
     <script>
     $(function() {
