--- a/public/jeep-ls-conversion/index.html
+++ b/public/jeep-ls-conversion/index.html
@@ -82,7 +82,7 @@
 	<div class="row m-b-3">
     <div class="col-sm-6">
        <div class="galleria">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-1.jpg" alt="Jeep Wrangler LS XConversion">
+      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-1.jpg" alt="Jeep Wrangler LS Conversion">
       <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-2.jpg" alt="Jeep Wrangler LS Conversion">
       <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-3.jpg" alt="Jeep Wrangler LS Conversion">
       <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-4.jpg" alt="Jeep Wrangler LS Conversion">
