--- a/content/feed/_index.html
+++ b/content/feed/_index.html
@@ -3,7 +3,8 @@ title: Bruiser Conversions Social Feed
 description: Bruiser Conversions Social Media Feed
 aliases:
     - /news
-    - /blog
+    - /blog/2013/
+    -/pages/feed
 ---
 
 <div class="cover">
