Update LS to JK LS

--- a/content/jeep-ls-conversion/_index.html
+++ b/content/jeep-ls-conversion/_index.html
@@ -1,19 +1,17 @@
 ---
-title: Jeep Wrangler LS Conversions
-description: Jeep Wrangler LS Conversion Kit
+title: Jeep JK Wrangler LS Conversions
+description: Jeep JK Wrangler LS Conversion Kit
 aliases:
-    - /test-2
     - /jeep-wrangler-ls-conversion-kit
     - /jeep-wrangler-ls-conversions
     - /jeep-wrangler-ls-conversion
     - /pages/ls_conversions
     - /jeep-wrangler-2007-2011-ls-conversions/
-    - /2014/05/03/poison-spyder-jk-ls3-conversion/
     
 ---
 
 <div class="cover">
-  <h1>Jeep Wrangler LS Conversion</h1>
+  <h1>Jeep JK Wrangler LS Conversion</h1>
   <img src="/images/jeep-ls-engine-conversion-001.jpg" alt="Jeep Wrangler LS Conversion Kit" style='position: absolute; bottom: -75px;' />
 </div>
 
@@ -21,34 +19,18 @@ aliases:
 	<div class="row m-b-3">
     <div class="col-sm-6">
        <div class="galleria">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-1.jpg" alt="Jeep Wrangler LS Conversion">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-2.jpg" alt="Jeep Wrangler LS Conversion">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-3.jpg" alt="Jeep Wrangler LS Conversion">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-4.jpg" alt="Jeep Wrangler LS Conversion">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-5.jpg" alt="Jeep Wrangler LS Conversion">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-6.jpg" alt="Jeep Wrangler LS Conversion">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-7.jpg" alt="Jeep Wrangler LS Conversion">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-8.jpg" alt="Jeep Wrangler LS Conversion">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-9.jpg" alt="Jeep Wrangler LS Conversion">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-10.jpg" alt="Jeep Wrangler LS Conversion">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-11.jpg" alt="Jeep Wrangler LS Conversion">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-12.jpg" alt="Jeep Wrangler LS Conversion">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-14.jpg" alt="Jeep Wrangler LS Conversion">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-15.jpg" alt="Jeep Wrangler LS Conversion">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-16.jpg" alt="Jeep Wrangler LS Conversion">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-17.jpg" alt="Jeep Wrangler LS Conversion">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-18.jpg" alt="Jeep Wrangler LS Conversion">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-19.jpg" alt="Jeep Wrangler LS Conversion">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-20.jpg" alt="Jeep Wrangler LS Conversion">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-21.jpg" alt="Jeep Wrangler LS Conversion">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-22.jpg" alt="Jeep Wrangler LS Conversion">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-23.jpg" alt="Jeep Wrangler LS Conversion">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-24.jpg" alt="Jeep Wrangler LS Conversion">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-25.jpg" alt="Jeep Wrangler LS Conversion">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-26.jpg" alt="Jeep Wrangler LS Conversion">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-27.jpg" alt="Jeep Wrangler LS Conversion">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-28.jpg" alt="Jeep Wrangler LS Conversion">
-      <img src="/images/galleries/clyde-ls-tj/clyde-ls-tj-29.jpg" alt="Jeep Wrangler LS Conversion">
+      <img src="/images/galleries/jk-ls-conversion/jk-ls-conversion-1.jpg" alt="Jeep JK Wrangler LS Conversion">
+      <img src="/images/galleries/jk-ls-conversion/jk-ls-conversion-2.jpg" alt="Jeep JK Wrangler LS Conversion">
+      <img src="/images/galleries/jk-ls-conversion/jk-ls-conversion-3.jpg" alt="Jeep JK Wrangler LS Conversion">
+      <img src="/images/galleries/jk-ls-conversion/jk-ls-conversion-4.jpg" alt="Jeep JK Wrangler LS Conversion">
+      <img src="/images/galleries/jk-ls-conversion/jk-ls-conversion-5.jpg" alt="Jeep JK Wrangler LS Conversion">
+      <img src="/images/galleries/jk-ls-conversion/jk-ls-conversion-6.jpg" alt="Jeep JK Wrangler LS Conversion">
+      <img src="/images/galleries/jk-ls-conversion/jk-ls-conversion-7.jpg" alt="Jeep JK Wrangler LS Conversion">
+      <img src="/images/galleries/jk-ls-conversion/jk-ls-conversion-8.jpg" alt="Jeep JK Wrangler LS Conversion">
+      <img src="/images/galleries/jk-ls-conversion/jk-ls-conversion-9.jpg" alt="Jeep JK Wrangler LS Conversion">
+      <img src="/images/galleries/jk-ls-conversion/jk-ls-conversion-10.jpg" alt="Jeep JK Wrangler LS Conversion">
+      <img src="/images/galleries/jk-ls-conversion/jk-ls-conversion-11.jpg" alt="Jeep JK Wrangler LS Conversion">
+      <img src="/images/galleries/jk-ls-conversion/jk-ls-conversion-12.jpg" alt="Jeep JK Wrangler LS Conversion">
    </div>
     <script>
     $(function() {
