Change LS to JK LS

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <title>Bruiser Conversions</title>
-<meta name="description" content="Bruiser Conversions">
+<meta name="description" content="">
 <link rel="stylesheet" media="all" href="/css/bootstrap.css"/>
 <link rel="stylesheet" media="all" href="/css/font-awesome.min.css"/>
 <link rel="stylesheet" media="all" href="/css/application.css"/>
@@ -37,7 +37,7 @@
 
       <div class="dropdown-menu" aria-labelledby="power-menu-link">
         <h6 class="dropdown-header">Engine Conversions</h6>
-        <a href="/jeep-ls-conversion" class="dropdown-item">LS</a>
+        <a href="/jeep-ls-conversion" class="dropdown-item">JK LS</a>
         <a href="/jeep-hemi-conversion" class="dropdown-item">Hemi</a>
         <a href="/jeep-diesel-conversion" class="dropdown-item">Diesel</a>
         <div class="dropdown-divider"></div>
@@ -73,7 +73,8 @@
 </nav>
 
     
-  <div id="home-carousel" class="carousel slide carousel-fade cover" data-ride="carousel">
+  
+           <div id="home-carousel" class="carousel slide carousel-fade cover" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#home-carousel" data-slide-to="0" class="active"></li>
     <li data-target="#home-carousel" data-slide-to="1"></li>
@@ -120,7 +121,8 @@
     </div>
   </div>
 </div>
-
+ 
+  
 
     <div class="container-fluid footer">
     <div class="row">
