--- a/public/overlander/index.html
+++ b/public/overlander/index.html
@@ -37,7 +37,7 @@
 
       <div class="dropdown-menu" aria-labelledby="power-menu-link">
         <h6 class="dropdown-header">Engine Conversions</h6>
-        <a href="/jeep-ls-conversion" class="dropdown-item">LS</a>
+        <a href="/jeep-ls-conversion" class="dropdown-item">JK LS</a>
         <a href="/jeep-hemi-conversion" class="dropdown-item">Hemi</a>
         <a href="/jeep-diesel-conversion" class="dropdown-item">Diesel</a>
         <div class="dropdown-divider"></div>
