Update Contact to Zoho

--- a/content/thankyou/_index.html
+++ b/content/thankyou/_index.html
@@ -2,7 +2,7 @@
 title: Contact Us - Bruiser Conversions
 description: Contact Bruiser Conversions
 aliases:
-    - /contact-us
+    - /thankyou
     - /pages/contact
 ---
 
@@ -11,6 +11,7 @@ aliases:
 </div>
 
 <div class="container m-b-3">
-  <h1>Contact Us</h1>
-<script src='https://crm.zoho.com/crm/WebFormServeServlet?rid=24584442c9d9024b273daabc5166468c54deb81b4cc6b635b11660961e58d9f5gid962854a98674b98c4570011c661e325c1be22c5832188aa92065610b0d95a5eb&script=$sYG'></script>
+  <h1>Thank you for reaching out to Bruiser!</h1>
+<p>
+	<div>We will get back to you shortly regarding the information you submitted.</p><p>Feel free to followup via email at: <a href="mailto:info@bruiserconversions.com">info@bruiserconversions.com</a> or phone: 727-317-4902</div></p>
 </div>
